--- a/VenturaITC.DSMS/App_GlobalResources/ResourcesButtons.resx
+++ b/VenturaITC.DSMS/App_GlobalResources/ResourcesButtons.resx
@@ -117,19 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="CreateNew" xml:space="preserve">
-    <value>Criar Novo</value>
+  <data name="BackToList" xml:space="preserve">
+    <value>Voltar à Lista</value>
   </data>
-  <data name="Home" xml:space="preserve">
-    <value>Início</value>
+  <data name="Create" xml:space="preserve">
+    <value>Criar</value>
   </data>
-  <data name="Management" xml:space="preserve">
-    <value>Gestão</value>
+  <data name="Delete" xml:space="preserve">
+    <value>Eliminar</value>
   </data>
-  <data name="Students" xml:space="preserve">
-    <value>Alunos</value>
+  <data name="Edit" xml:space="preserve">
+    <value>Editar</value>
   </data>
-  <data name="Users" xml:space="preserve">
-    <value>Utilizadores</value>
+  <data name="Save" xml:space="preserve">
+    <value>Gravar</value>
   </data>
 </root>
