--- a/VenturaITC.DSMS/App_GlobalResources/ResourcesMenus.resx
+++ b/VenturaITC.DSMS/App_GlobalResources/ResourcesMenus.resx
@@ -120,6 +120,9 @@
   <data name="CreateNew" xml:space="preserve">
     <value>Criar Novo</value>
   </data>
+  <data name="Enrollment" xml:space="preserve">
+    <value>Inscrição</value>
+  </data>
   <data name="Home" xml:space="preserve">
     <value>Início</value>
   </data>
