--- a/VenturaITC.DSMS/App_GlobalResources/ResourcesTitles.resx
+++ b/VenturaITC.DSMS/App_GlobalResources/ResourcesTitles.resx
@@ -147,4 +147,10 @@
   <data name="StudentList" xml:space="preserve">
     <value>Lista de Alunos</value>
   </data>
+  <data name="CategoryInfo" xml:space="preserve">
+    <value>Informação da Carta</value>
+  </data>
+  <data name="Contacts" xml:space="preserve">
+    <value>Contactos</value>
+  </data>
 </root>
