--- a/VenturaITC.DSMS/App_GlobalResources/ResourcesFields.resx
+++ b/VenturaITC.DSMS/App_GlobalResources/ResourcesFields.resx
@@ -439,7 +439,7 @@
     <value>Documentos</value>
   </data>
   <data name="LicenseStatus" xml:space="preserve">
-    <value>Estado da Carta</value>
+    <value>Fase da Carta</value>
   </data>
   <data name="LicenseStatusRequired" xml:space="preserve">
     <value>O campo {0} é de preenchimento obrigatório.</value>
